--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>JavaScript Video Controls</title>
     <link rel="stylesheet" type="text/css" href="css/video.css">
-    <script src="js/video.js"></script>
+    <script src="js/video.js" async></script>
 </head>
 
 <body>
